adding additional crop module api's
