# storage/api-docs/api-docs.json
@@ -91,6 +91,40 @@
                 }
             }
         },
+        "/auth/user/input/{crop_id}": {
+            "get": {
+                "tags": [
+                    "input"
+                ],
+                "summary": "Get inputs and input_price",
+                "description": "Returns inputs and input_price",
+                "operationId": "api.auth.user.input",
+                "parameters": [
+                    {
+                        "name": "crop_id",
+                        "in": "path",
+                        "description": "crop id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "authentication token",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "Invalid Credentials"
+                    }
+                }
+            }
+        },
         "/auth/user/survey/{country_id}": {
             "get": {
                 "tags": [
